--- a/web/Resources/lib.Resources.ClassLibrary.Class1.sv.resx
+++ b/web/Resources/lib.Resources.ClassLibrary.Class1.sv.resx
@@ -13,5 +13,5 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
 	<data name="something" xml:space="preserve"><value>something.</value></data>
-	<data name="Test" xml:space="preserve"><value>Localized string for value "Test" web root Project.Namespace.class</value></data>
+	<data name="Test" xml:space="preserve"><value>Localized string for value "Test" web resource dir project.resources.namespace.class (sv)</value></data>
 </root>
